Fixing White Space

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -24,7 +24,7 @@ nav {
     color: #fff;
     display: flex;
     justify-content: space-between;
-    height:fit-content;
+    height: 33.5vh; /* Change applied */
     overflow: hidden;
     width:100%;
 }
